--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -1,18 +1,19 @@
-{% extends "learning_logs/base.html" %}
+{% extends 'learning_logs/base.html' %}
 
 {% block content %}
 
-  <p>Topic: {{ topic }}</p>
+	<p>Topics</p>
 
-  {% for topic in topics %}
-    <p>
-      <a href="{% url 'learning_logs:topic' topic.id %}">
-        {{ topic.text }}
-      </a>
-    </p>
-  {% empty %}
-    <p>No topics have been added yet.</p>
-  {% endfor %}
+		<ul>
+			{% for topic in topics %}
+			<li>
+				<a href="{% url 'learning_logs:topic' topic.id %}">
+			        <a href="{% url 'learning_logs:new_topic' %}">Add a new topic</a>
+
+					{{ topic.text}}</a>
+			</li>
+			{% empty %}
+				<li>No topics have been added yet.</li>
+			{% endfor %}
+		</ul>
 {% endblock content %}
-
-
