Replace 11_project with ll_project and add recipe app

--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,9 +1,12 @@
-<p>Learning Log</p>
+{% extends "learning_logs/base.html" %}
 
-<p>Learning Log helps you keep track of your learning, for any topic you're interested in.</p>
+  {% block page_header %}
+    <div class="p-3 mb-4 bg-light border rounded-3">
+      <div class="container-fluid py-4">
+      <h1 class="display-3">Track your learning.</h1>
+      <p class="lead">Make your own Learning Log...</p>
+      <a class="btn btn-primary btn-lg mt-1" href="{% url 'accounts:register' %}">Register &raquo;</a>
+      </div>
+    </div>
+{% endblock page_header %}
 
-{% extends 'learning_logs/base.html' %}
-
-{% block content %}
-
-{% endblock content%}
